# puzzle-solver

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  build.rs  docker-compose.yml  index.ts  sdkconfig.defaults
.cargo/: config.toml
.github/: FUNDING.yml
benches/: benchmark.rs
src/: display.rs  eeprom.rs  lib.rs  main.rs  puzzle.rs  puzzles.json  puzzles.rs  randomizer.rs  reporter.rs  secp256k1.rs  sha256.rs  utilities.rs  worker.rs
src/cuda/: hello_world.cu  secp256k1.cu  sha256.cu  sha256.cuh
src/cuda/math/: secp256k1.cu
src/cuda/secp256k1/: ecc.cu
workspaces/core/: Cargo.toml
workspaces/core/src/: lib.rs  main.rs  puzzle.rs  puzzles.json
workspaces/desktop/: Cargo.toml
workspaces/desktop/src/: main.rs
workspaces/esp32/: Cargo.toml
workspaces/esp32/src/: desktop.rs  eeprom.rs  main.rs  utilities.rs
workspaces/secp256k1/: Cargo.toml
workspaces/secp256k1/src/: lib.rs  main.rs
workspaces/shared/: Cargo.toml
workspaces/shared/src/: lib.rs  puzzle.rs  puzzles.rs  reporter.rs
