[package]
name = "puzzle-solver"
version = "0.1.1"
edition = "2021"

[dependencies]
rand = "^0.8.5"
bitcoin = "^0.32.2"
anyhow = "^1.0.81"
serde_json = "^1.0.114"
serde = { version = "^1.0.197", features = ["derive"] }
bs58 = "^0.5.1"
num-bigint = "^0.4.6"
num-traits = "^0.2.19"
k256 = { version = "^0.14.0-pre.0", features = ["precomputed-tables"] }
human_format = "1.1.0"
clap = { version = "4.5.13", features = ["derive"] }
cudarc = { version = "0.11.8", features = ["cuda-12050"], optional = true }
criterion = { version = "0.5.1" }

[lib]

[[bench]]
name = "benchmark"
harness = false

[build-dependencies]
bindgen_cuda = { version = "0.1.5", optional = true }

[features]
cuda = [
    "cudarc",
    "bindgen_cuda"
]
