[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.80"
serde_json = "^1.0.114"
serde = { version = "^1.0.197", features = ["derive"] }
bs58 = "^0.5.0"
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = "^0.2.18"
k256 = "0.13.3"
rand = "0.8.5"
sha256 = "1.5.0"