[package]
name = "esp32"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
esp-idf-sys = { version = "^0.34.1", features = ["native", "binstart"] }
esp-idf-hal = { version = "^0.43.1", features = ["native"] }
anyhow = "^1.0.81"
serde_json = "^1.0.114"
serde = { version = "^1.0.197", features = ["derive"] }
num-bigint = { version = "^0.4.4", features = ["rand"] }
num-traits = "^0.2.18"
embedded-graphics = "^0.8.1"
ssd1306 = "^0.8.4"
display-interface = "^0.5.0"
profont = "^0.7.0"

[build-dependencies]
embuild = "^0.31.4"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"
